# spot_micro

./: .gitignore  .gitmodules  README.md
docker-full/: README.md  docker-compose.yml  dockerfile
servo_ctl/src/servo_ctl/: CMakeLists.txt  package.xml
servo_ctl/src/servo_ctl/include/servo_ctl/: joint_control.hpp
servo_ctl/src/servo_ctl/src/: i2c_servo_ctl.cpp  joint_control.cpp
spot_ws/launch/: README.md  pose_cycle_launch.py  sensor_launch.xml  servo_testing_launch.py  simple_walker_launch.py
spot_ws/src/: servo_ctl.py
spot_ws/src/commanding/: README.md  package.xml  setup.cfg  setup.py
spot_ws/src/commanding/commanding/: joy2cmd.py  joy2joints.py
spot_ws/src/joint_ctl/: README.md  package.xml  setup.cfg  setup.py
spot_ws/src/joint_ctl/joint_ctl/: servo_ctl.py
spot_ws/src/joint_ctl/joint_ctl/lib/: cal_servo.py  servo.py  spot_joints.py
spot_ws/src/motion_control/: README.md  package.xml  setup.py
spot_ws/src/motion_control/motion_control/: classic_gait.py  pose_cycle.py
spot_ws/src/motion_control/motion_control/lib/: motion_utils.py  poses.py  smk_test.py  spot_kinematics.py  state.py  walking.py
spot_ws/src/motion_control/test/: test_motion_utils.py
spot_ws/src/perception/: package.xml  setup.py
spot_ws/src/perception/perception/: depth_anything.py
spot_ws/src/spot_interfaces/: CMakeLists.txt  package.xml
spot_ws/src/spot_interfaces/msg/: JointAngles.msg  SpotMotionCommand.msg  StateCmd.msg
